Add support for qrc icons to StyleItem

BUG: 427449

FIXED-IN: 5.76